# functions/src/modules/pocks/models/pock-message.ts
@@ -2,12 +2,10 @@ import { LatLong } from "../../../common/models/lat-long";
 
 /**
  * Type of the PockMessage
- *
- * It has no validator as it is an outgoing object (database -> external device).
  */
 export class PockMessage {
     // @ts-ignore
-    constructor({id, message, location, dateInserted, user, username, url, category, chatAccess}) {
+    constructor({id, message, location, dateInserted, user, username, url, category, chatAccess, likes, canLike}) {
         this.id = id
         this.message = message
         this.location = location
@@ -17,6 +15,8 @@ export class PockMessage {
         this.media = url
         this.category = category
         this.chatAccess = chatAccess
+        this.likes = likes
+        this.canLike = canLike
     }
 
     id: any
@@ -36,4 +36,8 @@ export class PockMessage {
     category: string
 
     chatAccess: boolean
+
+    canLike: boolean
+
+    likes: number
 }
